# msa-9IN1

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
accounting-service/: Dockerfile  pom.xml
api-gateway/: Dockerfile  pom.xml
delivery-service/: Dockerfile  pom.xml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
food-delivery-cpp/: README.md  docker-compose.yml
food-delivery-cpp/api-gateway/: CMakeLists.txt  Dockerfile
food-delivery-cpp/api-gateway/include/: httplib.h
food-delivery-cpp/api-gateway/src/: api_gateway.cpp  api_gateway.h  main.cpp
food-delivery-cpp/order-service/: CMakeLists.txt  Dockerfile
food-delivery-cpp/order-service/include/: order_service.h
food-delivery-cpp/order-service/src/: main.cpp
food-delivery-dotnet/: docker-compose.yml
food-delivery-dotnet/accounting-service/: Dockerfile  Program.cs  accounting-service.csproj  appsettings.json
food-delivery-dotnet/delivery-service/: Dockerfile  Program.cs  appsettings.json  delivery-service.csproj
food-delivery-dotnet/kitchen-service/: Dockerfile  Program.cs  appsettings.json  kitchen-service.csproj
food-delivery-dotnet/notification-service/: Dockerfile  Program.cs  appsettings.json  notification-service.csproj
food-delivery-dotnet/order-service/: Dockerfile  OrderService.csproj  Program.cs
food-delivery-dotnet/restaurant-service/: Dockerfile  Program.cs  appsettings.json  restaurant-service.csproj
food-delivery-go/: Makefile  README.md  docker-compose.yml  go.mod
food-delivery-go/api-gateway/: Dockerfile  go.mod  main.go
food-delivery-go/scripts/: init-databases.sql  test-api.sh
food-delivery-go/shared/: go.mod  models.go  utils.go
food-delivery-javascript/: README.md  docker-compose.yml  start-dev.sh  test-api.sh
food-delivery-javascript/accounting-service/: Dockerfile  package.json
food-delivery-javascript/api-gateway/: Dockerfile  app.js  config.js  package.json  routes.js
food-delivery-javascript/delivery-service/: Dockerfile  package.json
food-delivery-javascript/food-delivery-typescript/: README.md  docker-compose.yml  init-db.sql  package.json
food-delivery-javascript/shared/: database.js  (+3 more)
food-delivery-php/: README.md  docker-compose.yml
food-delivery-python/: README.md  docker-compose.yml  prometheus.yml
food-delivery-ruby/: README.md  docker-compose.yml
food-delivery-rust/: Cargo.toml  README.md  docker-compose.yml
food-delivery-rust/api-gateway/: Cargo.toml  Dockerfile
food-delivery-rust/api-gateway/src/: handlers.rs  main.rs  service_discovery.rs
food-delivery-rust/kitchen-service/: Cargo.toml  Dockerfile
food-delivery-rust/kitchen-service/migrations/: 001_initial.sql
food-delivery-rust/kitchen-service/src/: database.rs  handlers.rs  main.rs  models.rs
food-delivery-rust/order-service/: Cargo.toml  Dockerfile
food-delivery-rust/order-service/migrations/: 001_initial.sql
food-delivery-rust/order-service/src/: database.rs  handlers.rs  main.rs  models.rs
food-delivery-rust/restaurant-service/: Cargo.toml  Dockerfile
food-delivery-rust/restaurant-service/migrations/: 001_initial.sql
food-delivery-rust/restaurant-service/src/: database.rs  handlers.rs  main.rs  models.rs
food-delivery-rust/shared/: Cargo.toml
food-delivery-rust/shared/src/: error.rs  models.rs
kitchen-service/: Dockerfile  pom.xml
notification-service/: Dockerfile  pom.xml
order-service/: Dockerfile  pom.xml
restaurant-service/: Dockerfile  pom.xml
restaurant-web-ui/: Dockerfile  nginx.conf  package.json
scripts/: build-all.sh  run-tests.sh  start-dev.sh  stop-all.sh
(+121 files in other folders)
