[workspace]
members = [
    "shared",
    "api-gateway",
    "order-service",
    "restaurant-service",
    "kitchen-service",
    "delivery-service",
    "accounting-service",
    "notification-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Food Delivery Team"]
license = "MIT"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }